# blob-e2e-poc

./: .env.default  .gitignore  Cargo.toml  README.md  app-logic.md  client.sh  full-flow-aux.sh  full-flow-requests.sh  full-flow.sh
ad-server/: Cargo.toml
ad-server/src/: db.rs  endpoints.rs  eth.rs  main.rs  pod.rs  queue.rs
app/: Cargo.toml
app/src/: lib.rs  macros.rs  main.rs
common/: Cargo.toml
common/src/: circuits.rs  disk.rs  groth.rs  lib.rs  payload.rs  shrink.rs
synchronizer/: Cargo.toml
synchronizer/src/: db.rs  endpoints.rs  lib.rs  main.rs
synchronizer/src/clients/: common.rs  macros.rs  mod.rs
synchronizer/src/clients/beacon/: mod.rs  types.rs
