[workspace]
members = [
    "ad-server",
    "synchronizer",
    "app",
    "common"]
resolver = "3"

[workspace.dependencies]
alloy = { version = "1.0.13", features = [
    "eips",
    "full",
    "json-rpc",
    "hyper", #
    "transport-http", #
    "signer-local", #
    "rpc-client",
    "rpc-types-beacon"
] }
tokio = {version="1.45", features = ["rt-multi-thread", "macros"]}
plonky2 = { git = "https://github.com/0xPARC/plonky2.git", rev = "767a098d89b8d50d8aacfdce0c0a7222e8760d37" }
pod2 = { git="https://github.com/0xPARC/pod2", rev = "59ec06a72f658606a068755927fa751501f04ce5", default-features = false, features = ["backend_plonky2", "disk_cache", "zk"]}
env_logger = { version = "0.11" }
log = { version = "0.4.14", features = ["kv_unstable"] }
dotenvy = "0.15.7"
anyhow = "1.0.56"
sqlx = { version="0.8.6", features = ["sqlite", "chrono", "runtime-tokio"] }
warp = "0.3"
hex = "0.4.3"

# logging
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter" ] }
tracing-log = "0.1.1"

# [patch."https://github.com/0xPARC/pod2"]
# pod2 = { path = "../pod2" }

[patch."https://github.com/0xPARC/plonky2"]
plonky2 = { git = "https://github.com/0xPARC/plonky2?rev=main", rev = "109d517d09c210ae4c2cee381d3e3fbc04aa3812" }

# [patch."https://github.com/0xPARC/plonky2"]
# plonky2 = { path = "../plonky2/plonky2" }

# [profile.release]
# debug = true
