[package]
name = "ad-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }
plonky2 = { workspace = true }
pod2 = { workspace = true }

itertools = "0.14.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
