[package]
name = "ad-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }
plonky2 = { workspace = true }
pod2 = { workspace = true }
dotenvy = { workspace = true }
warp = { workspace = true }

app = { path = "../app" }
common = { path = "../common" }

itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
async-recursion = "1.1.1"

# logging
tracing = "0.1.19"
