[package]
name = "ad-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }
plonky2 = { workspace = true }
pod2 = { workspace = true }
dotenvy = { workspace = true }
warp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
minicbor-serde = { workspace = true }

app = { path = "../app" }
common = { path = "../common" }

itertools = "0.14.0"
async-recursion = "1.1.1"
uuid = { version = "1.18", features = ["v7", "serde"] }
