[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
warp = { workspace = true }
pod2 = { workspace = true }
plonky2 = { workspace = true }
itertools = "0.14.0"
tracing = { workspace = true }
tracing-log = { workspace = true }

pod2_onchain = { git = "https://github.com/0xPARC/pod2-onchain.git", rev = "80209c226b51b15a060ed1de4236af476acdbe23", default-features=false, features = ["disk_cache"]}

[dev-dependencies]
app = { path = "../app" }
