[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
warp = { workspace = true }
pod2 = { workspace = true }
plonky2 = { workspace = true }
itertools = "0.14.0"
tracing = { workspace = true }
tracing-log = { workspace = true }
serde_json = { workspace = true }

pod2_onchain = { git = "https://github.com/0xPARC/pod2-onchain.git", rev = "490b98fe9f94b574e87d687bdb014ce6fc36cafc", default-features=false, features = ["disk_cache"]}

[dev-dependencies]
app = { path = "../app" }
